--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.github.sgoeschl</groupId>
 	<artifactId>boon-json-extensions</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
 	<packaging>jar</packaging>
 	<name>Boon JSON Extensions</name>
 	<description>Some additional Boon functionality to be used with my Galting project</description>
